# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
brain_games/: .cli.py.swp  cli.py  engine.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_prog.py  game_calc.py  game_even.py  game_gcd.py  game_prime.py  game_prog.py  game_progression.py
brain_games/scripts/: .brain_even.py.swp  .brain_games.py.swp  brain_calc.py  brain_even.py  brain_even.py.save  brain_games.py  brain_games.py.save  brain_gcd.py  brain_prime.py  brain_prog.py  brain_progression.py
