[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Ruslan M <evilpingu@yandex.ru>"]
readme = "README.md"
#packages = [{include = "hexlet_code"}]
packages = [{include = "brain_games"}]

[tool.poetry.dependencies]
python = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
